# ShiftWatch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Plan/: ShiftWatch_Project_Plan.aux  ShiftWatch_Project_Plan.fdb_latexmk  ShiftWatch_Project_Plan.fls  ShiftWatch_Project_Plan.out  ShiftWatch_Project_Plan.tex  ShiftWatch_Project_Plan.toc
api/: __init__.py  main.py
dashboard/: app.py
reports/: architecture.md
src/shiftwatch/: __init__.py
src/shiftwatch/engine/: __init__.py
src/shiftwatch/etl/: __init__.py
src/shiftwatch/models/: __init__.py
tests/: test_api_health.py
